added enlightenment as a concept
-added enlightenment as a concept, to slow down 3de estate dissatisfaction increase

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -25,6 +25,8 @@
  br_impending_revolution_has_new_noble_titles_loc: "has [GetStaticModifier('br_modifier_new_noble_titles').GetName|v]."
  br_impending_revolution_has_reduced_land_taxes_loc: "has [GetStaticModifier('br_modifier_reduced_land_taxes').GetName|v]."
  br_impending_revolution_has_subsidize_food_distribution_loc: "has [GetStaticModifier('subsidize_food_distribution').GetName|v]."
+ #Having enlightenment Modifiers effects
+ br_impending_revolution_not_has_chruch_and_state_should_be_separated_loc: "not has [GetStaticModifier('br_modifier_chruch_and_state_should_be_separated').GetName|v]"
 
  #Feudalism laws effect
  br_impending_revolution_has_feudalism_enforced_loc: "has enacted [GetLawType('br_law_feudalism_enforced').GetName]."
@@ -299,6 +301,13 @@
  hre_revolution_events.307.a: "The Revolution has begun."
  br_revolution_errupts_warning_tt: "#r From now on the Revolution has errupted and you will have to manage the stability of the revolution thru a new Journal Entry.#!"
 
+ #Church and state should be seperated
+ hre_revolution_events.401.t: "Separation of Church and State"
+ hre_revolution_events.401.d: "Writers and philosophers across the country have begun spreading ideas of how the church should be separated from the state."
+ hre_revolution_events.401.f: "All across the country people have begun spreading the idea that there should be a separation between the church and the state. This idea has especially taken off amongst members of the [br_concept_3de_estate]."
+ hre_revolution_events.401.a: "What an interesting new idea."
+ br_3de_estate_believes_chruch_and_state_should_be_separated_tt: "[br_concept_3de_estate] gets [GetStaticModifier('br_modifier_chruch_and_state_should_be_separated').GetName|v]."
+
  #Food security has stabilized
  hre_revolution_events.501.t: "Food security has stabilized"
  hre_revolution_events.501.d: "Our food security has stabilized"
@@ -323,6 +332,8 @@
  br_modifier_subsidize_food_distribution: "Subsidize food distribution"
  br_modifier_new_noble_titles: "New Noble titles"
  br_modifier_reduced_land_taxes: "Reduced land taxes"
+ #Enlightenment Modifiers
+ br_modifier_chruch_and_state_should_be_separated: "Church and state should be separated"
 
  #######################################################################################
 
