enlightenment value now affects the 3de estate dissatisfaction

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -16,6 +16,7 @@
  br_impending_revolution_to_many_loyalists_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_loyalist_percentage_as_integer')]%#! of the population are [concept_loyalist]."
  br_impending_revolution_to_many_radicals_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_radicals_percentage_as_integer')]%#! of the population are [concept_radical]."
  br_impending_revolution_monarchy_popularity_revolution_progress_change_loc: "the current Monarchy popularity."
+ br_impending_revolution_enlightenment_value_estate_disatisfaction_change_loc: "having a [br_concept_enlightenment_value] of [GetPlayer.MakeScope.GetVariable('br_enlightenment_value_var').GetValue]."
  br_impending_revolution_1de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_1de_estate] disatisfaction."
  br_impending_revolution_2de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_2de_estate] disatisfaction."
  br_impending_revolution_3de_estate_disatisfaction_revolution_progress_change_loc: "the current [br_concept_3de_estate] disatisfaction."
@@ -429,3 +430,10 @@
  #monarchy popularity concept
  br_concept_monarchy_popularity: "Monarchy Popularity"
  br_concept_monarchy_popularity_desc: "This represents how popular the monarchy is among the people."
+
+
+ #######################################################################################
+
+ ##Enlightenment
+ br_concept_enlightenment_value: "Enlightenment value"
+ br_concept_enlightenment_value_desc: "This represents the spread of enlightened ideas amongst the people of our nation."
