added event chain for 1de estate revolution

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
 
+ #requires the capital state to be saved in br_capital_scope
+ br_capital_city_loc: "[SCOPE.sState('br_capital_scope').GetStateRegion.GetCityHubName]"
+
  #######################################################################################
  ##Scripted progressbars
  br_hre_impending_revolution_progress_bar: "Impending Revolution"
@@ -264,6 +267,31 @@
  hre_revolution_events.9.d: "A statue of [SCOPE.sCharacter('br_statue_monarch').GetPrimaryRoleTitle] [SCOPE.sCharacter('br_statue_monarch').GetFullName] was commissioned and it has been suggested that it be displayed proudly in [SCOPE.sState('br_statue_state').GetName]. "
  hre_revolution_events.9.f: "'[SCOPE.sCharacter('br_statue_monarch').GetCustom('personality_traits_loc')] is how you would describe the look on the face of the statue when it smiles down on you. Eyes that flicker in the opposite direction of the sun.\n\nThough maybe you are just imagining it?'"
  hre_revolution_events.9.a: "A monument worthy of the [SCOPE.sCharacter('br_statue_monarch').GetPrimaryRoleTitle]."
+ #Cardinal blocks emperor form going to church
+ hre_revolution_events.101.t: "Blocked form church"
+ hre_revolution_events.101.d: "When the Emperor attempted to go to church this morning he found the Cardinal of $br_capital_city_loc$ blocking the entrance, upon which a fierce discussion errupted. Noticing that the situation was escalating the Emperor decided to withdraw back to his palace to prevent further embarassment."
+ hre_revolution_events.101.f: "The Emperor can't believe his eyes the Cardinal of $br_capital_city_loc$ and other members of the Clergy are blocking his entrance to the church. The astonishment of the Emperor quickly turns to anger. 'How dare they, don't they realize that they aren't just blocking any random person, they are are blocking the #b one#! person on this planet ordained by God to rule this nation.' An intense argument erupt between both sides, neither side willing to budge, but then the Emperor starts to notice the eyes of the people around them, this is turning into quiet the embarassment. So in order to prevent himself from being humiliated any further the Emperor decides that it is best to withdraw back to the Palace, to prevent things from escalating anymore."
+ hre_revolution_events.101.a: "How embarrassing."
+ #Emperor orders the cardinal to be sacked
+ hre_revolution_events.102.t: "Cardinal sacked"
+ hre_revolution_events.102.d: "After what happened at the entrance of the church the emperor orders the Cardinal of $br_capital_city_loc$ to be sacked."
+ hre_revolution_events.102.f: "The Emperor is furious, to oppose the monarch is treason the cardinal will pay, but as long as he is cardinal he will enjoy protection from the Church, so his first punished will be to loose his title. The Emperor will have his revenge for this embarassment. However his advisors warn him that this will have risks, after all it is the Papacy that gets to apoint church positions."
+ hre_revolution_events.102.a: "Revenge will be sweet."
+ #Pope excommunicates the emperor
+ hre_revolution_events.103.t: "Excommunicated"
+ hre_revolution_events.103.d: "It seems that the Pope has sided with the cardinal again the Emperor, because after he heard that the emperor had sacked him he decided to excommunicate the emperor."
+ hre_revolution_events.103.f: "The Emperor is shaking he looks at the letter from the Pope infront of him but he still can't believe it, he knew the Pope wouldn't be happy but this is not what he had expected. This is horrible with the current instability in the nation, this could be disastrous. All dissidents have just been given an excuse to oppose him, this must be fixed quickly but how?"
+ hre_revolution_events.103.a: "THE POPE DID WHAT."
+ #Emperor tries to plead with the Cardinal but gets imprisoned
+ hre_revolution_events.104.t: "The Emperor pleads but is ceased"
+ hre_revolution_events.104.d: "In a desperate attempt to reverse his Excommunication the Emperor decide to go plead with the deposed cardinal offering to reinstate him, but when he go's to meet him, the Emperor gets ceased by the cardinal and other members of the Clergy. They are now holding him hostage."
+ hre_revolution_events.104.f: "The Emperor enters the dimly lit room, the cardinal is standing in the center of the room, hesitantly he start walking to the cardinal and drops to his knees offering him excuses, his reinstatement and anything else if he can just get the Pope to revert his Excommunication. But then out of nowhere a bunch of men storm the room, from their clothes it is clear that they are members of the Clergy. Before the Emperor can even move the cardinal grabs him and hold him inplace. The Emperor now realizes that it was a mistake to even try and plead with the cardinal, but it is to late now."
+ hre_revolution_events.104.a: "How did it come to this."
+ #The clergy seizes the state
+ hre_revolution_events.105.t: "A truly holy empire"
+ hre_revolution_events.105.d: "While they where ceasing the Emperor, the rest of the Clergy have manage to assume control of the country, and they have decided that from now on the Chruch will run the country."
+ hre_revolution_events.105.f: "The former Cardinal of $br_capital_city_loc$ looks around the table, all off the important member of the Church from within the country are present. They just decided that the empire will be reorganised as a theocracy and a vote has decided that the former cardinal will be its new leader. They have already recieve support from the Pope for their coup, now all that is left is to actually implement their reforms."
+ hre_revolution_events.105.a: "Deus Vult."
  #Revolution erupts events
  hre_revolution_events.301.t: "March on the Royal Residence"
  hre_revolution_events.301.d: "A large number of members of the 3de estate have decided to march on the [br_concept_imperial_residence]."
