updated end of revolution effects
-updated end of revolution effects
-added a specific end of revolution effect for every estate
-added new modifiers

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -361,6 +361,8 @@
  br_modifier_subsidize_food_distribution: "Subsidize food distribution"
  br_modifier_new_noble_titles: "New Noble titles"
  br_modifier_reduced_land_taxes: "Reduced land taxes"
+ br_modifier_holiest_of_empires: "Holiest of Empires"
+ br_modifier_an_aristocratic_empire: "An Aristocratic Empire"
  #Enlightenment Modifiers
  br_modifier_chruch_and_state_should_be_separated: "Church and state should be separated"
 
