the Holiest Roman Empire
-added a dyn name for if the HRE is a theocracy

--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -208,6 +208,8 @@
  dyn_c_khazer_adj: "Khazer"
  dyn_c_HRE: "Holy Roman Empire"
  dyn_c_HRE_adj: "Holy Roman"
+ dyn_c_hre_theocracy: "Holiest Roman Empire"
+ dyn_c_hre_theocracy_adj: "Holiest Roman"
 
  #Monarchy
  dyn_c_br_basileia_romaion: "Basileía Romaíon"
