added new character templates

--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -971,3 +971,18 @@
  Zhuruli: "Zhuruli"
  Zhvania: "Zhvania"
  Zvambaia: "Zvambaia"
+
+#Frankish
+ #Male First Names
+ Clovis: "Clovis"
+ #Female First Names
+ #Noble Last Names
+ Merovingian: "Merovingian"
+ #Common Last Names
+
+#Flemish
+ #Male First Names
+ #Female First Names
+ #Noble Last Names
+ Van_vlaanderen: "Van Vlaanderen"
+ #Common Last Names
