added event chain for 2de estate revolution

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -289,9 +289,38 @@
  hre_revolution_events.104.a: "How did it come to this."
  #The clergy seizes the state
  hre_revolution_events.105.t: "A truly holy empire"
- hre_revolution_events.105.d: "While they where ceasing the Emperor, the rest of the Clergy have manage to assume control of the country, and they have decided that from now on the Chruch will run the country."
+ hre_revolution_events.105.d: "While they where ceasing the Emperor, the rest of the Clergy have manage to assume control of the country, and they have decided that from now on the Chruch will run the country.\n$br_hre_impending_revolution_1de_estate_has_overthrown_the_monarch_tt$"
  hre_revolution_events.105.f: "The former Cardinal of $br_capital_city_loc$ looks around the table, all off the important member of the Church from within the country are present. They just decided that the empire will be reorganised as a theocracy and a vote has decided that the former cardinal will be its new leader. They have already recieve support from the Pope for their coup, now all that is left is to actually implement their reforms."
  hre_revolution_events.105.a: "Deus Vult."
+ #A group of nobles is hosting a lavish feast outside the capital
+ hre_revolution_events.201.t: "Nobles host a lavish feast"
+ hre_revolution_events.201.d: "A group of powerfull nobles have decided to host a lavish feast outside of the capital and they have invited the Emperor as the guest of honour."
+ hre_revolution_events.201.f: "The Emperor looks at the man infront of him, one of his nobles vassals who has come to personally invite him to a party, that he and a group of other nobles have organised. Apperantly it's going to be a lavish feast that practically every noble from within the realm is going to attend and of course the organisers want the Emperor to attend as the guest of honour, after all its only fitting the Emperor would be the most important person there."
+ hre_revolution_events.201.a: "How exciting."
+ #The Emperor attends the feast
+ hre_revolution_events.202.t: "The Emperor attends the feast"
+ hre_revolution_events.202.d: "The party organised by the nobles is now in full swing with the Emperor in attendance."
+ hre_revolution_events.202.f: "The Emperor looks around him everything is perfect and incredibly lavish, and he is surrounded by every powerfull noble off the realm. Truly he is having the time of his life, #r surely nothing can ruin this perfect day...#!"
+ hre_revolution_events.202.a: "Lets Party!"
+ #The nobles seize the Emperor
+ hre_revolution_events.203.t: "#r Betrayal#!"
+ hre_revolution_events.203.d: "Then suddenly, when the Emperor is distracted by the party, the nobles around him rush forward and tie him to a chair. It's clear now this party was a mear setup to capture him."
+ hre_revolution_events.203.f: "Suddenly the Emperor feels a bunch of hands grabbing him, then they push him into a chair. The Emperor tries to react but the licore has made his movements sluggish, and so without much resistance the nobles have manage to tie up and capture their own liege. The Emperor tries screaming to his guard to help him and to arrest the traitors, but the guard don't do anything, they just watch everything unfold, showing no intent to intervene. It's clear now that not only his nobles have betrayed him but also his soldiers. One can only wonder what will happen now."
+ hre_revolution_events.203.a: "The bastards!"
+ #The nobility gathers in the capital
+ hre_revolution_events.204.t: "The nobility gathers in the capital"
+ hre_revolution_events.204.d: "After having imprisoned the Emperor the conspirators most of the Nobility was quick to side with the conspirators thus handing control of the entire realm to the Nobility. Now they must decide what to do next."
+ hre_revolution_events.204.f: "Destain of the current Emperor has lead most off the Nobility to turn again the Monarch. Now all of the most powerfull nobles have gathered in the capital to decide who will take the Crown, however one thing is certain it won't be the current Emperor."
+ hre_revolution_events.204.a: "How interesting."
+ #The nobility decides on who will be Emperor
+ hre_revolution_events.205.t: "A new Emperor"
+ hre_revolution_events.205.d: "Having assembled in the capital the nobles of the realm must now decide who will be the new Emperor.\n$br_hre_impending_revolution_1de_estate_has_overthrown_the_monarch_tt$"
+ hre_revolution_events.205.f: "The Nobility gets to chose who gets to sit on the Imperial throne, will they chose to keep the current dynasty in power, or will they chose a claimant of an other dynasty?"
+ hre_revolution_events.205.a: "A Carolingian."
+ hre_revolution_events.205.b: "A $Merovingian$."
+ hre_revolution_events.205.c: "A $Van_vlaanderen$."
+ hre_revolution_events.205.e: "A $d_Orleans$."
+ hre_revolution_events.205.g: "A $von_Bayern$."
  #Revolution erupts events
  hre_revolution_events.301.t: "March on the Royal Residence"
  hre_revolution_events.301.d: "A large number of members of the 3de estate have decided to march on the [br_concept_imperial_residence]."
@@ -325,7 +354,7 @@
  hre_revolution_events.306.a: "What will this mean for the Monarchy."
  #A revolutionary council of the 3de estate conviens and drafts a constitution
  hre_revolution_events.307.t: "A Constitution, the Revolution has begun"
- hre_revolution_events.307.d: "Today a revolutionary council of the 3de estate has conviened and has drafted a constitution, with this they have officially overthrown the previous regime and established their own, the #bold Revolution#! has now truly begun."
+ hre_revolution_events.307.d: "Today a revolutionary council of the 3de estate has conviened and has drafted a constitution, with this they have officially overthrown the previous regime and established their own, the #bold Revolution#! has now truly begun.\n$br_hre_impending_revolution_1de_estate_has_overthrown_the_monarch_tt$"
  hre_revolution_events.307.f: "As of now there is a new government in Paris, this new Revolutionary government has pledged to change the country and transform it into a enlightent and modern nation. However while the new government has solidified its rule over the capital it is yet uncertain if the rest of the country will loyally follow this new course for the nation, as many within the Empire still see the Emperor as the true legitimate ruler of the Empire.\nFor now the government is trying to uphold the illusion that the Emperor supports the revolution, so for the moment the Monarchy remains in place. However it is yet to be seen if the Emperor will truly back this new course or if he will simply try to undo the Revolution. So perhaps it would be better if there was no Monarchy and perhaps we should abolish this 1000 year antiquated system and return to the republic of old. Perhaps it would indeed be better if we followed in the footsteps of the old Romans and abolished the Monarchy to create a republic, this would perhaps be unpopular but the road to Enlightenment requires #r Sacrifices#!."
  hre_revolution_events.307.a: "The Revolution has begun."
  br_revolution_errupts_warning_tt: "#r From now on the Revolution has errupted and you will have to manage the stability of the revolution thru a new Journal Entry.#!"
@@ -449,6 +478,9 @@
  br_how_to_increase_3de_estate_disatisfaction_loc: "To increase $br_3de_estate_loc$ disatisfaction try to pass laws that would strip power away from the commoners/give power to the nobility or try to take actions against the estate thru the buttons in the [concept_journal_entry]."
  br_how_to_decrease_3de_estate_disatisfaction_loc: "To decrease $br_3de_estate_loc$ disatisfaction try to pass laws that would give to the commoners or try to take actions supporting the estate thru the buttons in the [concept_journal_entry]."
 
+ br_hre_impending_revolution_1de_estate_has_overthrown_the_monarch_tt: "@information! The [br_concept_1de_estate] has launch its revolution overthrowing the Monarch."
+ br_hre_impending_revolution_2de_estate_has_overthrown_the_monarch_tt: "@information! The [br_concept_2de_estate] has launch its revolution overthrowing the Monarch."
+ br_hre_impending_revolution_3de_estate_has_overthrown_the_monarch_tt: "@information! The [br_concept_3de_estate] has launch its revolution overthrowing the Monarch."
 
  #######################################################################################
 
