added a easter egg feature for if the HRE is an AI
-If the HRE is an AI than they can become a PU of Vlaandern-Brabant and Bavaria if they choose a Van Vlaanderen or a Von Bayern respectively when the 2de estate launches its revolution.

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -392,6 +392,7 @@
  br_modifier_reduced_land_taxes: "Reduced land taxes"
  br_modifier_holiest_of_empires: "Holiest of Empires"
  br_modifier_an_aristocratic_empire: "An Aristocratic Empire"
+ br_modifier_a_new_foreign_emperor: "A Foreign Emperor"
  #Enlightenment Modifiers
  br_modifier_chruch_and_state_should_be_separated: "Church and state should be separated"
 
