--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -479,9 +479,9 @@
  br_how_to_increase_3de_estate_disatisfaction_loc: "To increase $br_3de_estate_loc$ disatisfaction try to pass laws that would strip power away from the commoners/give power to the nobility or try to take actions against the estate thru the buttons in the [concept_journal_entry]."
  br_how_to_decrease_3de_estate_disatisfaction_loc: "To decrease $br_3de_estate_loc$ disatisfaction try to pass laws that would give to the commoners or try to take actions supporting the estate thru the buttons in the [concept_journal_entry]."
 
- br_hre_impending_revolution_1de_estate_has_overthrown_the_monarch_tt: "@information! The [br_concept_1de_estate] has launch its revolution overthrowing the Monarch."
- br_hre_impending_revolution_2de_estate_has_overthrown_the_monarch_tt: "@information! The [br_concept_2de_estate] has launch its revolution overthrowing the Monarch."
- br_hre_impending_revolution_3de_estate_has_overthrown_the_monarch_tt: "@information! The [br_concept_3de_estate] has launch its revolution overthrowing the Monarch."
+ br_hre_impending_revolution_1de_estate_has_overthrown_the_monarch_tt: "@information! The [br_concept_1de_estate] has launched its revolution overthrowing the Monarch."
+ br_hre_impending_revolution_2de_estate_has_overthrown_the_monarch_tt: "@information! The [br_concept_2de_estate] has launched its revolution overthrowing the Monarch."
+ br_hre_impending_revolution_3de_estate_has_overthrown_the_monarch_tt: "@information! The [br_concept_3de_estate] has launched its revolution overthrowing the Monarch."
 
  #######################################################################################
 
