Added new events that will trigger leading up to the 1ste or 2de launching their revolution

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -267,6 +267,16 @@
  hre_revolution_events.9.d: "A statue of [SCOPE.sCharacter('br_statue_monarch').GetPrimaryRoleTitle] [SCOPE.sCharacter('br_statue_monarch').GetFullName] was commissioned and it has been suggested that it be displayed proudly in [SCOPE.sState('br_statue_state').GetName]. "
  hre_revolution_events.9.f: "'[SCOPE.sCharacter('br_statue_monarch').GetCustom('personality_traits_loc')] is how you would describe the look on the face of the statue when it smiles down on you. Eyes that flicker in the opposite direction of the sun.\n\nThough maybe you are just imagining it?'"
  hre_revolution_events.9.a: "A monument worthy of the [SCOPE.sCharacter('br_statue_monarch').GetPrimaryRoleTitle]."
+ #Priests refuses to acknowledge the Emperors divine right to rule
+ hre_revolution_events.10.t: "Divine right to rule denied"
+ hre_revolution_events.10.d: "Multiple priests across the realm have begon refusing to acknowledge the Emperors divine right to rule."
+ hre_revolution_events.10.f: "The priest of the realm have become disatisfied with the monarch and as protest they are now refusing to acknowledge the Emperor as God’s representative on earth."
+ hre_revolution_events.10.a: "Sacrilege!"
+ #Nobels whisper of a new monarch
+ hre_revolution_events.11.t: "Whispers of a new monarch"
+ hre_revolution_events.11.d: "It seems that the Nobels of the realm have begun whispering talks of a new Monarch."
+ hre_revolution_events.11.f: "Rumors have begun reaching us about the fact that some nobles have been discussing questions of who would have the strongest claim on the trone besides the Emperor."
+ hre_revolution_events.11.a: "Worrying."
  #Cardinal blocks emperor form going to church
  hre_revolution_events.101.t: "Blocked form church"
  hre_revolution_events.101.d: "When the Emperor attempted to go to church this morning he found the Cardinal of $br_capital_city_loc$ blocking the entrance, upon which a fierce discussion errupted. Noticing that the situation was escalating the Emperor decided to withdraw back to his palace to prevent further embarassment."
