--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -122,9 +122,12 @@
  #######################################################################################
 
  ##Script value breakdowns
+ br_revolution_from_holy_roman_emperor_loc: "From having [GetStaticModifier('br_modifier_holy_roman_emperor').GetName]"
  br_revolution_from_statue_of_ruler_loc: "From having [GetStaticModifier('modifier_statue_of_ruler').GetName]"
  br_revolution_from_antiquated_regime_loc: "From having [GetStaticModifier('br_modifier_antiquated_regime').GetName]"
+ br_revolution_from_unpopular_regime_loc: "From having [GetStaticModifier('br_modifier_unpopular_regime').GetName]"
  br_revolution_from_bourgeois_ministers_loc: "From having [GetStaticModifier('br_modifier_bourgeois_ministers').GetName]"
+ br_revolution_from_divine_right_denied_loc: "From having Divine Right denied"
  #temp grefm loc (TODO remove later)
  grefm_value_from_voting: "From enacting #yellow Voting Rights#!"
  grefm_value_from_completed_legacies: "From completed #bold Ottoman Legacy#! [Concept('concept_journal_entry', '$concept_journal_entries$')]"
@@ -369,6 +372,11 @@
  hre_revolution_events.307.a: "The Revolution has begun."
  br_revolution_errupts_warning_tt: "#r From now on the Revolution has errupted and you will have to manage the stability of the revolution thru a new Journal Entry.#!"
 
+ #Generic enlightenment ideas spread event
+ hre_revolution_events.400.t: "Enlightenment ideas spread"
+ hre_revolution_events.400.d: "Writers and philosophers across the country have begun spreading ideas across the people."
+ hre_revolution_events.400.f: "All across the country people have begun spreading the enlightened ideas. This idea has especially taken off amongst members of the [br_concept_3de_estate]."
+ hre_revolution_events.400.a: "New ideas hey."
  #Church and state should be seperated
  hre_revolution_events.401.t: "Separation of Church and State"
  hre_revolution_events.401.d: "Writers and philosophers across the country have begun spreading ideas of how the church should be separated from the state."
@@ -510,3 +518,6 @@
  ##Enlightenment
  br_concept_enlightenment_value: "Enlightenment value"
  br_concept_enlightenment_value_desc: "This represents the spread of enlightened ideas amongst the people of our nation."
+ 
+ br_hre_impending_revolution_increase_enlightenment_value_tt: "[br_concept_enlightenment_value] increased with [GetPlayer.MakeScope.ScriptValue('br_basic_change_in_enlightenment_value')|-=]"
+ br_hre_impending_revolution_decrease_enlightenment_value_tt: "[br_concept_enlightenment_value] decreased with [GetPlayer.MakeScope.ScriptValue('br_basic_change_in_enlightenment_value')|+=]"
