updated a estate button
-updated the require oath of loyalty from priests button

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -26,6 +26,7 @@
 
  #Having modifiers effecs
  br_impending_revolution_has_special_chruch_rights_loc: "has [GetStaticModifier('br_modifier_special_chruch_rights').GetName|v]."
+ br_impending_revolution_has_require_oath_of_loyalty_from_priests_loc: "has [GetStaticModifier('br_modifier_require_oath_of_loyalty_from_priests').GetName|v]."
  br_impending_revolution_has_new_noble_titles_loc: "has [GetStaticModifier('br_modifier_new_noble_titles').GetName|v]."
  br_impending_revolution_has_reduced_land_taxes_loc: "has [GetStaticModifier('br_modifier_reduced_land_taxes').GetName|v]."
  br_impending_revolution_has_subsidize_food_distribution_loc: "has [GetStaticModifier('br_modifier_subsidize_food_distribution').GetName|v]."
@@ -200,6 +201,8 @@
  je_reinstate_chruch_rights_button_desc: "We must reinstate the special priviliges of the church to curry favor with them."
  je_require_oath_of_loyalty_from_priests_button: "Require oath of loyalty from priests"
  je_require_oath_of_loyalty_from_priests_button_desc: "We must ensure that the Clergy is loyal to the Crown and not to Rome."
+ je_no_longer_require_oath_of_loyalty_from_priests_button: "No longer require oath of loyalty from priests"
+ je_no_longer_require_oath_of_loyalty_from_priests_button_desc: "This oath is only making them more disloyal."
  #3de estate buttons
  je_appoint_bourgeois_ministers_button: "Apoint Bourgeois ministers"
  je_appoint_bourgeois_ministers_button_desc: "Apoint members of the bourgeoisie to the position of minister as to appease the $br_3de_estate_loc$."
@@ -405,6 +408,7 @@
  br_modifier_modernizing_the_regime: "Modernizing the Regime"
  br_modifier_imperial_residence: "Imperial Residence"
  br_modifier_special_chruch_rights: "Special Chruch Rights"
+ br_modifier_require_oath_of_loyalty_from_priests: "Require an oath of loyalty from Priests"
  br_modifier_bourgeois_ministers: "Bourgeois Ministers"
  br_modifier_subsidize_food_distribution: "Subsidize food distribution"
  br_modifier_new_noble_titles: "New Noble titles"
