updated 2de estate progressbar

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -40,6 +40,9 @@
  br_impending_revolution_has_feudalism_not_enforced_loc: "has enacted [GetLawType('br_law_feudalism_not_enforced').GetName]."
  br_impending_revolution_has_feudalism_affirmative_action_loc: "has enacted [GetLawType('br_law_feudalism_affirmative_action').GetName]."
  #Voting laws effects
+ br_impending_revolution_has_autocracy_loc: "has enacted [GetLawType('law_autocracy').GetName]"
+ br_impending_revolution_has_oligarchy_loc: "has enacted [GetLawType('law_oligarchy').GetName]"
+ br_impending_revolution_not_has_autocracy_or_oligarchy_loc: "not has enacted [GetLawType('law_autocracy').GetName] or [GetLawType('law_oligarchy').GetName]"
  br_impending_revolution_has_a_law_that_allows_you_to_vote_loc: "has a law that allows you to vote."
  #Bureaucracy laws effects
  br_impending_revolution_has_hereditary_bureaucrats_loc: "has enacted [GetLawType('law_hereditary_bureaucrats').GetName]"
