Wrote some flavor for the HRE and ERE objectives.

--- a/localization/english/br_objectives_l_english.yml
+++ b/localization/english/br_objectives_l_english.yml
@@ -46,7 +46,7 @@
  objective_egalitarian_society_desc_NAH:0 "#lore $NAH_FLAVOR_TEXT$#!"
 
  br_hre_objective: "Holy Roman Empire"
- br_hre_objective_desc: "TODO"
+ br_hre_objective_desc: "Play as the 'True' heir of the Roman Empire founded by Charlemagne and make it more Holy, more Roman and the largest Empire. Or play as one of its vassals and dismantle the Empire from within."
  br_hre_objective_name_HRE:0 "#v Holy Roman Empire#!"
  br_hre_objective_desc_HRE: "#lore $HRE_FLAVOR_TEXT$#!"
  br_hre_objective_name_FLA: "#v $FLA$#!"
@@ -71,7 +71,7 @@
  br_hre_objective_desc_BAV: "#lore $BAV_FLAVOR_TEXT$#!"
 
  br_ere_objective: "Eastern Roman Empire"
- br_ere_objective_desc: "TODO"
+ br_ere_objective_desc: "Play as the remains of Rome and see Justinians dream come to fruition. Or play as one of the Roman break away states."
  br_ere_objective_name_BYZ: "#v $dyn_c_br_basileia_romaion$#!"
  br_ere_objective_desc_BYZ: "#lore $BYZ_FLAVOR_TEXT$#!"
  br_ere_objective_name_br_aegypt: "#v $br_aegypt$#!"
