--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -457,7 +457,7 @@
  br_imperial_residence_building_loc: "[GetPlayer.MakeScope.GetVariable( 'br_current_imperial_residence_var' ).GetBuilding.GetName]"
  br_original_imperial_residence_building_loc: "[GetPlayer.MakeScope.GetVariable( 'br_original_imperial_residence_var' ).GetBuilding.GetName]"
  br_concept_imperial_residence:1 "Imperial Residence"
- br_concept_imperial_residence:0 "Royal Residence"
+ #br_concept_imperial_residence:0 "Royal Residence"
  br_concept_imperial_residence_desc:1 "The $br_concept_imperial_residence$ is the location wheir the Imperial families lives[GetPlayer.GetCustom('br_imperial_residence_location_loc')]"
  br_concept_imperial_residence_location: ", which is currently $br_imperial_residence_building_loc$."
  #tooltip:tooltip_tag,tooltip_body,cooltip your text here#!
@@ -484,6 +484,9 @@
  #most disatisfied estates
  br_current_most_disatisfied_estate_loc: "Currently the estate with the highest disatisfaction is the #yellow [GetPlayer.GetCustom('br_estate_with_the_highest_disatisfaction_loc')]#! with $br_estate_with_the_highest_disatisfaction_value_loc$ disatisfaction."
  br_estate_with_the_highest_disatisfaction_value_loc: "[ROOT.GetVariable('br_estate_with_highest_disatisfaction_var').GetVariable('br_estate_disatisfaction_var').GetValue|+-]"
+ br_estate_with_the_highest_disatisfaction_is_1de_estate_loc: "[br_concept_1de_estate]"
+ br_estate_with_the_highest_disatisfaction_is_2de_estate_loc: "[br_concept_2de_estate]"
+ br_estate_with_the_highest_disatisfaction_is_3de_estate_loc: "[br_concept_3de_estate]"
  br_1de_estate_disatisfaction_loc: "[ROOT.GetVariable('br_1de_estate_var').GetVariable('br_estate_disatisfaction_var').GetValue|+-]"
 
  #How to change estate disatisfaction
