--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -7,7 +7,8 @@
  ##Scripted progressbars
  br_hre_impending_revolution_progress_bar: "Impending Revolution"
  br_hre_impending_revolution_progress_bar_desc: "As this increases the Revolution draws closer."
- br_je_hre_impending_revolution_progress_reached_max: "The Revolution has erupted."
+ br_je_hre_impending_revolution_progress_reached_max_value: "The Revolution has erupted."
+ br_je_hre_impending_revolution_progress_has_reached_specific_value: "Revolution progress has reached a specific value."
 
  br_hre_impending_revolution_1de_estate_progress_bar: "[br_concept_1de_estate] disatisfaction"
  br_hre_impending_revolution_1de_estate_progress_bar_desc: "[br_concept_1de_estate] disatisfaction"
@@ -481,6 +482,11 @@
  br_2de_estate_obj_info_loc: "This estate has a current disatisfaction of [ROOT.GetVariable('br_2de_estate_var').GetVariable('br_estate_disatisfaction_var').GetValue|+-]"
  br_3de_estate_obj_info_loc: "This estate has a current disatisfaction of [ROOT.GetVariable('br_3de_estate_var').GetVariable('br_estate_disatisfaction_var').GetValue|+-]"
 
+ #Maximum estate disatisfaction value
+ br_1de_estate_disatisfaction_max_value_loc: "[GetPlayer.MakeScope.ScriptValue('br_hre_impending_revolution_1de_estate_progress_bar_max_value')]"
+ br_2de_estate_disatisfaction_max_value_loc: "[GetPlayer.MakeScope.ScriptValue('br_hre_impending_revolution_2de_estate_progress_bar_max_value')]"
+ br_3de_estate_disatisfaction_max_value_loc: "[GetPlayer.MakeScope.ScriptValue('br_hre_impending_revolution_3de_estate_progress_bar_max_value')]"
+
  #most disatisfied estates
  br_current_most_disatisfied_estate_loc: "Currently the estate with the highest disatisfaction is the #yellow [GetPlayer.GetCustom('br_estate_with_the_highest_disatisfaction_loc')]#! with $br_estate_with_the_highest_disatisfaction_value_loc$ disatisfaction."
  br_estate_with_the_highest_disatisfaction_value_loc: "[ROOT.GetVariable('br_estate_with_highest_disatisfaction_var').GetVariable('br_estate_disatisfaction_var').GetValue|+-]"
@@ -488,6 +494,14 @@
  br_estate_with_the_highest_disatisfaction_is_2de_estate_loc: "[br_concept_2de_estate]"
  br_estate_with_the_highest_disatisfaction_is_3de_estate_loc: "[br_concept_3de_estate]"
  br_1de_estate_disatisfaction_loc: "[ROOT.GetVariable('br_1de_estate_var').GetVariable('br_estate_disatisfaction_var').GetValue|+-]"
+
+ #Has estate reached disatisfaction value
+ br_impending_revolution_has_1de_estate_disatisfaction_reached_max_value: "Has [br_concept_1de_estate] disatisfaction reached its maximum value of $br_1de_estate_disatisfaction_max_value_loc$."
+ br_impending_revolution_has_2de_estate_disatisfaction_reached_max_value: "Has [br_concept_2de_estate] disatisfaction reached its maximum value of $br_2de_estate_disatisfaction_max_value_loc$."
+ br_impending_revolution_has_3de_estate_disatisfaction_reached_max_value: "Has [br_concept_3de_estate] disatisfaction reached its maximum value of $br_3de_estate_disatisfaction_max_value_loc$."
+ br_impending_revolution_has_1de_estate_disatisfaction_has_reached_given_value: "Has [br_concept_1de_estate] disatisfaction reached a given value."
+ br_impending_revolution_has_2de_estate_disatisfaction_has_reached_given_value: "Has [br_concept_2de_estate] disatisfaction reached a given value."
+ br_impending_revolution_has_3de_estate_disatisfaction_has_reached_given_value: "Has [br_concept_3de_estate] disatisfaction reached a given value."
 
  #How to change estate disatisfaction
  br_how_to_change_estate_disatisfaction_tt_loc: "#tooltippable;tooltip:[Country.GetTooltipTag],br_how_to_change_estate_disatisfaction_tt_body_loc How to change the disatisfaction of an estate.#!"
