added the option to form the WRE
-added the option to form the WRE
-TODO: add a flag for WRE and a modifier that increases acceptance and assimilation

--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -124,6 +124,8 @@
  BR_ANT_ADJ: "Antiokheías"
  BR_PAL: "Palaistíneía" #Ierousalḗm 
  BR_PAL_ADJ: "Palaistíneía"
+ br_WRE: "Western Roman Empire"
+ br_WRE_ADJ: "Western Roman"
 
  #New World
  br_klein_venedig: "Klein-Venedig"
