--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -200,3 +200,7 @@
  romaioi_move_armenia_east_decision_02: "Reconstitute the Thema Armeniakon"
  romaioi_move_armenia_east_decision_02_desc: "With both Eastern and Western Armenia under imperial dominion and the Turks and Persians expelled from the highlands, the time has come to reconstitute the Thema Armeniakon along more defensible and strategic frontiers. By transferring Armenia’s administrative core eastward, we strengthen our grasp over the borderlands and reassert the unity of Roman authority in the East."
 
+ #WRE decisions
+ br_proclaim_ambition_to_restore_wre_decision: "Proclaim our ambition to restore the $br_WRE$"
+ br_proclaim_ambition_to_restore_wre_decision_desc: "The $br_WRE$ may have fallen a long time ago but we will make it our mission to restore it."
+ br_can_now_form_wre_tt: "We will be able to form the $br_WRE$ thru the [concept_nation_formation] tab"
