--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -530,3 +530,8 @@
  br_armenia_capital.3.a: "Let Ararat watch over our capital."
  br_armenia_capital.3.b: "The city is not yet ready."
  
+ #WRE formation
+ br_wre_event.1.t: "Golden Eagle"
+ br_wre_event.1.d: "With the restoration of [ROOT.GetCountry.GetName], our nation has laid claim to the legacy of Rome."
+ br_wre_event.1.f: "He climbed the old curia, as the sky darkened with storm clouds. The tales of the old patricians said that the senators would climb the curia and wait for a sign of the gods' favor. He sat, but not for long. Lightning cracked the sky, and a golden eagle landed by the gutter.\n\nAnd he wept: Rome would rise once more."
+ br_wre_event.1.a: "Rome will rise again."
