updated WRE formation event

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -535,3 +535,4 @@
  br_wre_event.1.d: "With the restoration of [ROOT.GetCountry.GetName], our nation has laid claim to the legacy of Rome."
  br_wre_event.1.f: "He climbed the old curia, as the sky darkened with storm clouds. The tales of the old patricians said that the senators would climb the curia and wait for a sign of the gods' favor. He sat, but not for long. Lightning cracked the sky, and a golden eagle landed by the gutter.\n\nAnd he wept: Rome would rise once more."
  br_wre_event.1.a: "Rome will rise again."
+ br_root_gets_claims_on_wre_territory_tt: "[ROOT.GetCountry.GetName] get a claim of all of the territory that once belonged to the $br_WRE$"
