added a JE for the WRE to reconquer the east

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -251,7 +251,9 @@
  je_afrika_homeland_reason: "The Afrikan people are not strangers to these lands — we are their heirs. From the days of the Exarchate to the long centuries of flux and foreign dominion, this coast and interior have never forgotten the shape of Rōmaíōn civilization. We are descended not only from the soldiers and settlers who crossed the sea, but from the Berber tribes who took up our ways, the Latin provincials who kept the old rites alive, and the Arab communities who came to speak and pray as we do.In our cities and fields live the living legacy of empire — not as a memory, but as a people. It is time for that people to be recognized. This land is our patrída — not by conquest, but by continuity."
  #je_afrika_homeland_goal: "Afrika homeland goal"
  
-
+ je_br_wre_reconquer_the_east: "Reconquer the east"
+ je_br_wre_reconquer_the_east_reason: "We must destroy the false pretenders in the east and reconquer our old eastern lands."
+ br_when_you_own_all_ere_states_tt: "When you own all Eastern Roman Empire states"
 
 
  
