--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -254,7 +254,4 @@
  je_br_wre_reconquer_the_east: "Reconquer the east"
  je_br_wre_reconquer_the_east_reason: "We must destroy the false pretenders in the east and reconquer our old eastern lands."
  br_when_you_own_all_ere_states_tt: "When you own all Eastern Roman Empire states"
-
-
- 
- 
+ br_changes_name_to_roman_empire_tt: "Changes you name to the Roman Empire"
